--- a/com.Equarz.Ecommerce/test-output/old/Default suite/classes.html
+++ b/com.Equarz.Ecommerce/test-output/old/Default suite/classes.html
@@ -4,22 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.Equarz.Testcases.BuynowTest</td>
+<td>com.Equarz.Testcases.Dropdowntest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Buynow</td>
+<td>drop</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Buynow2</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Buynow1</td>
+<td>search1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
