--- a/com.Equarz.Ecommerce/test-output/old/Default suite/classes.html
+++ b/com.Equarz.Ecommerce/test-output/old/Default suite/classes.html
@@ -4,29 +4,33 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.Equarz.Testcases.Dropdowntest</td>
+<td>com.Equarz.Testcases.AddressTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>drop</td>
+<td>address1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>search1</td>
+<td>del</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>editing</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>initialise</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>initialize</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
