--- a/com.Equarz.Ecommerce/test-output/old/Default suite/classes.html
+++ b/com.Equarz.Ecommerce/test-output/old/Default suite/classes.html
@@ -4,33 +4,25 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.Equarz.Testcases.AddressTest</td>
+<td>com.Equarz.Testcases.ProfileTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>address1</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>del</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>editing</td>
+<td>edit</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
 <td>&nbsp;</td>
 <td>initialise</td>
 <td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
